--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
         "laravel/fortify": "^1.13",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
-        "laravel/tinker": "^2.7"
+        "laravel/tinker": "^2.7",
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "^1.18",
+        "psr/simple-cache": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
